# Borked3DS

./: .gitmodules  CMakeLists.txt  README.md
.ci/: android.sh  ios.sh  linux-aarch64-clang.sh  linux-aarch64-gcc.sh  linux-clang-22.04.sh  linux-clang-24.04-arm.sh  linux-clang-24.04.sh  linux-gcc-22.04.sh  linux-gcc-24.04.sh  linux-gcc.sh  linux.sh  macos.sh  pack.sh  windows-clang.sh  windows-gcc.sh  windows.sh
.github/workflows/: build.yml  format.yml  publish.yml
CMakeModules/: BundleTarget.cmake  DownloadExternals.cmake  aqt_config.ini
src/: CMakeLists.txt
src/android/: build.gradle.kts
src/android/app/: build.gradle.kts
src/audio_core/: CMakeLists.txt  input_details.cpp  oboe_input.cpp  oboe_input.h  sdl2_sink.cpp  sdl2_sink.h  sdl3_sink.cpp  sdl3_sink.h  sink_details.cpp  sink_details.h  time_stretch.cpp
src/audio_core/hle/: hle.cpp  source.h
src/borked3ds/: CMakeLists.txt  borked3ds.cpp  config.cpp  config.h  default_ini.h
src/borked3ds/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_sw.cpp  emu_window_sdl2_sw.h  emu_window_sdl2_vk.cpp  emu_window_sdl3.cpp  emu_window_sdl3.h  emu_window_sdl3_gl.cpp  emu_window_sdl3_gl.h  emu_window_sdl3_sw.cpp  emu_window_sdl3_sw.h  emu_window_sdl3_vk.cpp  emu_window_sdl3_vk.h
src/borked3ds_qt/: CMakeLists.txt  bootmanager.cpp  game_list.cpp  game_list_p.h  game_list_worker.cpp  main.cpp  main.h  main.ui  uisettings.h
src/borked3ds_qt/camera/: camera_util.cpp
src/borked3ds_qt/configuration/: config.cpp  configure_debug.cpp  configure_debug.ui  configure_enhancements.cpp  configure_enhancements.h  configure_enhancements.ui  configure_general.cpp  configure_general.ui  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui  configure_hotkeys.cpp  configure_input.cpp  configure_layout.cpp  configure_layout.ui  configure_system.cpp  configure_system.h  configure_system.ui
src/borked3ds_qt/debugger/: registers.h  wait_tree.h
src/borked3ds_qt/debugger/graphics/: graphics_tracing.h
src/borked3ds_qt/multiplayer/: host_room.cpp  lobby.cpp
src/citra/: config.cpp  default_ini.h
src/citra_qt/: bootmanager.cpp
src/citra_qt/configuration/: config.cpp  configure_debug.cpp  configure_debug.ui  configure_enhancements.cpp  configure_enhancements.ui  configure_general.cpp  configure_general.ui  configure_layout.ui  configure_system.ui
src/common/: CMakeLists.txt  archives.h  cityhash.cpp  cityhash.h  common_paths.h  file_util.cpp  file_util.h  math_util.h  scope_exit.h  settings.cpp  settings.h  vector_math.h
src/common/hacks/: hack_manager.cpp  hack_manager.h
src/common/logging/: filter.cpp  types.h
src/core/: CMakeLists.txt  core.cpp  core.h  memory.cpp  memory.h  perf_stats.cpp  perf_stats.h  system_titles.cpp  system_titles.h
src/core/cheats/: gateway_cheat.cpp
src/core/file_sys/: archive_extsavedata.cpp  certificate.cpp  cia_container.cpp  cia_container.h  disk_archive.h  ncch_container.cpp  ncch_container.h  otp.h  romfs_reader.cpp  romfs_reader.h  seed_db.cpp  seed_db.h  signature.h  ticket.cpp  ticket.h  title_metadata.cpp
src/core/frontend/: emu_window.cpp  emu_window.h  framebuffer_layout.cpp  framebuffer_layout.h
src/core/gdbstub/: hio.cpp
src/core/hle/applets/: erreula.h  (+1 more)
src/core/hw/: ecc.cpp  unique_data.cpp  unique_data.h
src/core/loader/: 3dsx.cpp  artic.cpp  artic.h  loader.cpp  loader.h  ncch.cpp
src/core/rpc/: udp_server.cpp
src/dedicated_room/: CMakeLists.txt
src/input_common/: CMakeLists.txt  main.cpp  motion_emu.cpp
src/input_common/gcadapter/: gc_poller.cpp
src/input_common/sdl/: sdl.cpp  sdl.h  sdl_impl.cpp  sdl_impl.h
src/network/: CMakeLists.txt
src/network/artic_base/: artic_base_client.cpp  artic_base_client.h
src/tests/: CMakeLists.txt
src/tests/audio_core/hle/: hle.cpp  source.cpp
src/tests/audio_core/lle/: lle.cpp
src/tests/audio_core/merryhime_3ds_audio/: audio_test_biquad_filter.cpp
src/tests/video_core/: shader.cpp
src/video_core/: CMakeLists.txt  gpu.cpp  gpu.h  gpu_impl.h  pica_types.h  rasterizer_accelerated.cpp  rasterizer_accelerated.h  rasterizer_interface.h  renderer_base.cpp
src/video_core/host_shaders/: CMakeLists.txt  full_screen_triangle.vert  opengl_present_anaglyph_dubois.frag  opengl_present_anaglyph_rendepth.frag  opengl_present_interlaced.frag
src/video_core/pica/: output_vertex.cpp  output_vertex.h  pica_core.cpp  pica_core.h  regs_framebuffer.h  regs_rasterizer.h  regs_shader.h  shader_setup.h
src/video_core/rasterizer_cache/: framebuffer_base.h  pixel_format.h  rasterizer_cache.h  rasterizer_cache_base.h  sampler_params.h  surface_params.cpp  surface_params.h
src/video_core/renderer_opengl/: frame_dumper_opengl.cpp  gl_blit_helper.cpp  gl_blit_helper.h  gl_compatibility.cpp  gl_compatibility.h  gl_driver.cpp  gl_driver.h  gl_rasterizer.cpp  gl_rasterizer.h  gl_resource_manager.cpp  gl_resource_manager.h  gl_shader_disk_cache.cpp  gl_shader_disk_cache.h  gl_shader_manager.cpp  gl_shader_manager.h  gl_shader_util.cpp  gl_shader_util.h  gl_state.cpp  gl_state.h  gl_stream_buffer.cpp  gl_stream_buffer.h  gl_texture_mailbox.cpp  gl_texture_mailbox.h  gl_texture_mailbox_gles.h  gl_texture_runtime.cpp  gl_texture_runtime.h  pica_to_gl.h  renderer_opengl.cpp  renderer_opengl.h
src/video_core/renderer_software/: sw_clipper.cpp  sw_clipper.h  sw_lighting.cpp  sw_proctex.cpp  sw_rasterizer.cpp
src/video_core/renderer_vulkan/: pica_to_vk.h  renderer_vulkan.cpp  renderer_vulkan.h  vk_blit_helper.cpp  vk_blit_helper.h  vk_graphics_pipeline.cpp  vk_graphics_pipeline.h  vk_instance.cpp  vk_instance.h  vk_master_semaphore.cpp  vk_pipeline_cache.cpp  vk_pipeline_cache.h  vk_platform.cpp  vk_present_window.h  vk_rasterizer.cpp  vk_rasterizer.h  vk_render_manager.cpp  vk_render_manager.h  vk_renderpass_cache.cpp  vk_renderpass_cache.h  vk_scheduler.cpp  vk_swapchain.cpp  vk_texture_runtime.cpp  vk_texture_runtime.h  vk_types.h  vk_validation.h
src/video_core/shader/: shader_jit_a64_compiler.h  shader_jit_x64_compiler.cpp
src/video_core/texture/: etc1.cpp
(+214 files in other folders)
